examples/test/testpolicy12778.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy12778
  namespace: namespace477
spec:
  podSelector:
    matchLabels:
      key5: value46
      key10: value39
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key25: value25
          key31: value41
      podSelector:
        matchLabels:
          key27: value42
